crates/parser/tests/cases/snapshots/cases__errors__self_contract.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(self_contract), module::parse_module,\n    \"contract self {}\")"

---
error: failed to parse contract definition
  ┌─ self_contract:1:10
  │
1 │ contract self {}
  │          ^^^^ expected a name, found keyword `self`
  │
  = Note: `contract` must be followed by a name, which must start with a letter and contain only letters, numbers, or underscores


